# anki

./: .mypy.ini  CONTRIBUTORS  DESIGN.md  PRODUCT.md  README.md  justfile
brainlifts/: 1.md  features.md
ftl/core/: preferences.ftl  statistics.ftl  studying.ftl
ios/: build-xcframework.sh
ios/AnkiMCAT/: MEMORY_PALACE.md  Untitled  project.yml
ios/AnkiMCAT/Resources/: ATTRIBUTION.md  practice-seed.json
ios/AnkiMCAT/Sources/AnkiMCAT/App/: AnkiMCATApp.swift  CardWebView.swift  ReviewModel.swift  ReviewView.swift  SettingsModel.swift  SettingsView.swift  SyncModel.swift  SyncView.swift  Theme.swift  VoiceAnswerRecorder.swift
ios/AnkiMCAT/Sources/AnkiMCAT/Engine/: AnkiEngine.swift  LLMGrader.swift  McatCollection.swift  SyncStore.swift
ios/AnkiMCAT/Sources/AnkiMCAT/Memory/: MemoryModel.swift  MemoryView.swift
ios/AnkiMCAT/Sources/AnkiMCAT/Palace/: ARPalaceView.swift  CardPickerView.swift  LocusDetailView.swift  PalaceCaptureView.swift  PalaceCollectionStore.swift  PalaceListView.swift  PalaceLogic.swift  (+8 more)
ios/AnkiMCAT/Tests/AnkiMCATUITests/: ReviewFlowUITests.swift  SyncAccountUITests.swift
ios/AnkiMCAT/Tests/PalaceLogicTests/: PalaceLogicTests.swift  PalaceSyncLogicTests.swift  run-sync.sh  run.sh
ios/AnkiMCAT/Tests/PracticeLogicTests/: ParityFixtureTests.swift  PracticeLogicTests.swift  run-parity.sh  run.sh
proto/anki/: scheduler.proto
pylib/tests/: test_mcat_ai_off.py  test_mcat_sync.py  test_never_learned.py
qt/aqt/: __init__.py  deckbrowser.py  llm_grade.py  main.py  mastery.py  mediasrv.py  palace.py  practice.py  preferences.py  profiles.py  read.py  reviewer.py  sync.py  theme.py  toolbar.py  webview.py
qt/aqt/forms/: preferences.ui
qt/installer/app/: pyproject.toml
qt/tests/: test_mcat_eval.py  test_practice_history.py
qt/tests/mcat_eval/: AI_RATIONALE.md  BASELINE_COMPARISON.md  CARD_CHECK.md  README.md  SPEED_TARGETS.md  __init__.py  ablation_palace.py  agent_verdicts.json  baseline.py  bench.py  calibration.py  card_check.py  card_gold_set.json  coverage_map.py  dataset.py  generated_cards.json  grader_blind.json  grader_eval_set.json  injection_agent_verdicts.json  injection_eval.py  injection_gpt5nano_hardened.json  injection_gpt5nano_verdicts.json  injection_set.json  leakage.py  llm_driver.py  mcat_outline.json  metrics.py  paraphrase_gap.py  run_eval.py
qt/tests/mcat_eval/results/: ablation_palace.json  ablation_palace.md  bench.json  bench.md  calibration.json  calibration.md  card_check.json  card_check.md  coverage_map.json  coverage_map.md  injection.json  injection.md  latest.json  latest.md  paraphrase_gap.json  paraphrase_gap.md
qt/tools/: generate_demo_seed.py
questions/: cars.md
rslib/: Cargo.toml
rslib/ios/: Cargo.toml
rslib/ios/src/: lib.rs
rslib/src/error/: network.rs
rslib/src/scheduler/: reviews.rs
rslib/src/scheduler/service/: answering.rs  mod.rs
sass/: mcat-tools.scss
tools/minilints/src/: main.rs
tools/syncserver/: Dockerfile  README.md  docker-compose.yml  env.example  mcat-tools.Dockerfile  requirements-mcat-tools.txt
tools/syncserver/mcat_tools/: README.md  __init__.py  app.py  auth.py  llm.py  metrics.py  palace_store.py  practice_seed.py  schemas.py  sources.py
tools/syncserver/mcat_tools/data/: .gitignore  practice-seed.json
tools/syncserver/mcat_tools/tests/: test_app.py  test_metrics.py  test_metrics_parity.py  test_palace.py  test_palace_acceptance.py  test_read_passage_edge_cases.py
ts/: vite.config.ts
ts/lib/sass/: _color-palette.scss  _vars.scss
ts/routes/mastery/: +page.svelte
ts/routes/palace/: +page.svelte
ts/routes/practice/: +page.svelte  mcatMetrics.test.ts  mcatMetrics.ts
ts/routes/read/: +page.svelte
ts/routes/to-learn/: +page.svelte
ts/tests/unit/: mcatMetricsParity.test.ts  palaceAcceptance.test.ts  practiceSeed.test.ts
ts/tests/unit/fixtures/: metrics-parity-fixture.json
(+12 files in other folders)
