[package]
name = "anki-ios"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "C ABI staticlib shim exposing anki's backend to iOS/Swift"

[lib]
name = "anki_ios"
crate-type = ["staticlib"]
path = "src/lib.rs"
test = false

[dependencies]
# Enable a TLS backend (rustls + bundled roots) so the sync client can make
# HTTPS requests (e.g. to AnkiWeb). Without this, reqwest is built with no TLS
# and rejects https:// URLs with "invalid URL, scheme is not http".
anki = { workspace = true, features = ["rustls-webpki"] }
